Updated for next release

--- a/examples/training-a-text-classifier-using-tensorhub-models.ipynb
+++ b/examples/training-a-text-classifier-using-tensorhub-models.ipynb
@@ -2,37 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-16T09:12:53.875410Z",
-     "start_time": "2019-07-16T09:12:53.868456Z"
+     "end_time": "2019-07-16T09:31:07.170457Z",
+     "start_time": "2019-07-16T09:31:07.100049Z"
     }
    },
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorhub'",
+     "evalue": "No module named 'tensorhubtest'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-b51575385248>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorhub\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorhub'"
+      "\u001b[0;32m<ipython-input-1-47c9202424f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorhubtest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorhubtest'"
      ]
     }
    ],
+   "source": [
+    "import tensorhubtest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-16T09:31:12.902825Z",
+     "start_time": "2019-07-16T09:31:12.898736Z"
+    }
+   },
+   "outputs": [],
    "source": [
     "import tensorhub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-07-15T06:50:24.833267Z",
-     "start_time": "2019-07-15T06:50:24.830070Z"
+     "end_time": "2019-07-16T09:19:59.659288Z",
+     "start_time": "2019-07-16T09:19:56.819524Z"
     }
    },
    "outputs": [],
@@ -77,25 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-15T06:52:05.753878Z",
      "start_time": "2019-07-15T06:52:03.821290Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Shape: (200853, 6)\n",
-      "Columns: Index(['authors', 'category', 'date', 'headline', 'link', 'short_description'], dtype='object')\n",
-      "Number of train samples: 150639\n",
-      "Number of test samples: 50214\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Path to dataset in use\n",
     "filepath = \"../data/news-category.json\"\n",
@@ -121,23 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-15T06:52:51.640620Z",
      "start_time": "2019-07-15T06:52:51.616376Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum number of word in a sequence are 11\n",
-      "Maximum number of chars in a sequence are 69\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compute the maximum number of words and characters in a sequence from the whole corpus\n",
     "max_num_words = len(max(x).split())\n",
@@ -149,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-15T06:56:06.584868Z",
@@ -280,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-07-15T07:00:59.051485Z",
@@ -360,9 +354,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tf2_0]",
+   "display_name": "Python [conda env:package_test]",
    "language": "python",
-   "name": "conda-env-tf2_0-py"
+   "name": "conda-env-package_test-py"
   },
   "language_info": {
    "codemirror_mode": {
