addding pre-trained cnn training example

--- a/examples/training-a-text-classifier-using-tensorhub-models.ipynb
+++ b/examples/training-a-text-classifier-using-tensorhub-models.ipynb
@@ -1186,9 +1186,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:package_test]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-package_test-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
