update model call in example

--- a/examples/cnn_classification_example.ipynb
+++ b/examples/cnn_classification_example.ipynb
@@ -51,7 +51,7 @@
     "def resize_n_normalize_image(small_img, b=32, h=32):\n",
     "    img = Image.fromarray(small_img, \"L\") # reading a gray scale image from array\n",
     "    img = img.convert(mode='RGB') # added 3 channels to grapy scale image\n",
-    "    img = img.resize((b, h), PIL.Image.ANTIALIAS) # resizing the image\n",
+    "    img = img.resize((b, h), Image.ANTIALIAS) # resizing the image\n",
     "    return np.array(img)/255.0 # normalizing the image"
    ]
   },
@@ -217,8 +217,8 @@
    ],
    "source": [
     "n_classes = 10 # number of classes\n",
-    "model = VGG16(n_classes=n_classes, img_width=b, img_height=h).model()\n",
-    "model.summary()\n",
+    "model = VGG16(n_classes=n_classes, img_width=b, img_height=h)\n",
+    "\n",
     "\n",
     "# model compile\n",
     "model.compile(optimizer='rmsprop',\n",
